--- a/index.html
+++ b/index.html
@@ -32,3 +32,29 @@
             </div>
         </div>
     </header>
+
+    <nav class="mobile-nav md:hidden" id="mobile-nav">
+        <ul class="flex flex-col items-center space-y-6">
+            <li><a href="#problema" class="text-gray-700 hover:text-blue-600 text-lg font-medium transition duration-300">Problema</a></li>
+            <li><a href="#tecnologias" class="text-gray-700 hover:text-blue-600 text-lg font-medium transition duration-300">Tecnologias</a></li>
+            <li><a href="#objetivos" class="text-gray-700 hover:text-blue-600 text-lg font-medium transition duration-300">Objetivos</a></li>
+            <li><a href="#publico-alvo" class="text-gray-700 hover:text-blue-600 text-lg font-medium transition duration-300">Público-Alvo</a></li>
+            <li><a href="#beneficios" class="text-gray-700 hover:text-blue-600 text-lg font-medium transition duration-300">Benefícios</a></li>
+            <li><a href="#dia-a-dia" class="text-gray-700 hover:text-blue-600 text-lg font-medium transition duration-300">Impactos</a></li>
+            <li><a href="#seguranca" class="text-gray-700 hover:text-blue-600 text-lg font-medium transition duration-300">Segurança</a></li>
+            <li><a href="#contato" class="text-gray-700 hover:text-blue-600 text-lg font-medium transition duration-300">Contato</a></li>
+        </ul>
+    </nav>
+
+    <main class="container mx-auto px-4 py-8">
+
+        <section class="text-center py-16 bg-blue-50 rounded-xl shadow-lg mb-12">
+            <h1 class="text-4xl md:text-5xl font-extrabold text-blue-700 mb-4">Protegendo Vidas com Tecnologia</h1>
+            <p class="text-xl text-gray-600 max-w-2xl mx-auto">Sua solução tecnológica avançada para monitoramento de rios e prevenção de enchentes em tempo real.</p>
+            <p class="text-lg text-gray-500 mt-2">Fique à frente das águas. Sua segurança é nossa prioridade.</p>
+            <div class="flex justify-center space-x-4 mt-8">
+                <a href="#quiz" class="inline-block px-8 py-4 bg-green-600 text-white font-semibold rounded-lg shadow-md hover:bg-green-700 transition duration-300 transform hover:scale-105">Faça o Quiz!</a>
+                <a href="#simulador" class="inline-block px-8 py-4 bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 transition duration-300 transform hover:scale-105">Veja o Simulador!</a>
+                <a href="#seguranca" class="inline-block px-8 py-4 bg-purple-600 text-white font-semibold rounded-lg shadow-md hover:bg-purple-700 transition duration-300 transform hover:scale-105">Dicas de Segurança</a>
+            </div>
+        </section>
