Adicionando icones para a mudança de cor no html

--- a/index.html
+++ b/index.html
@@ -58,3 +58,28 @@
                 <a href="#seguranca" class="inline-block px-8 py-4 bg-purple-600 text-white font-semibold rounded-lg shadow-md hover:bg-purple-700 transition duration-300 transform hover:scale-105">Dicas de Segurança</a>
             </div>
         </section>
+
+                <section id="theme-switcher-section" class="py-12 bg-white rounded-xl shadow-lg mb-12 p-6 text-center">
+            <h2 class="text-3xl font-bold text-blue-600 mb-8">Personalize a Aparência da Página</h2>
+            <p class="text-gray-700 mb-6 max-w-2xl mx-auto">Alterne entre diferentes temas visuais para uma experiência personalizada:</p>
+            <div class="flex justify-center space-x-6 flex-wrap">
+                <div class="flex flex-col items-center mb-4">
+                    <button id="theme-light" class="p-4 rounded-full bg-gray-100 hover:bg-gray-200 transition duration-300 shadow-md" title="Tema Claro">
+                        <i class="fas fa-sun text-yellow-500 text-2xl"></i>
+                    </button>
+                    <p class="mt-2 text-sm text-gray-600">Ativa o tema claro, ideal para ambientes bem iluminados.</p>
+                </div>
+                <div class="flex flex-col items-center mb-4">
+                    <button id="theme-dark" class="p-4 rounded-full bg-gray-800 hover:bg-gray-700 transition duration-300 shadow-md" title="Tema Escuro">
+                        <i class="fas fa-moon text-gray-300 text-2xl"></i>
+                    </button>
+                    <p class="mt-2 text-sm text-gray-600">Ativa o tema escuro, confortável para visualização noturna.</p>
+                </div>
+                <div class="flex flex-col items-center mb-4">
+                    <button id="theme-blue" class="p-4 rounded-full bg-blue-100 hover:bg-blue-200 transition duration-300 shadow-md" title="Tema Azul">
+                        <i class="fas fa-tint text-blue-500 text-2xl"></i>
+                    </button>
+                    <p class="mt-2 text-sm text-gray-600">Ativa o tema azul, com tons suaves que remetem à água.</p>
+                </div>
+            </div>
+        </section>
