Adicionando Slide Show no html

--- a/index.html
+++ b/index.html
@@ -83,3 +83,26 @@
                 </div>
             </div>
         </section>
+
+                <section id="galeria" class="py-12 bg-white rounded-xl shadow-lg mb-12 p-6">
+            <h2 class="text-3xl font-bold text-blue-600 text-center mb-8">Imagens Ilustrativas</h2>
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Rio+com+Nivel+Normal" alt="[Image of River with Normal Level]">
+                </div>
+                <div class="mySlides fade">
+                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Alerta+de+Cheia+Emitido" alt="[Image of Flood Alert Issued]">
+                </div>
+                <div class="mySlides fade">
+                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Equipe+de+Resgate+em+Acao" alt="[Image of Rescue Team in Action]">
+                </div>
+                <div class="mySlides fade">
+                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Comunidade+Evacuando" alt="[Image of Community Evacuating]">
+                </div>
+                <div class="mySlides fade">
+                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Sensor+de+Nivel+de+Agua" alt="[Image of Water Level Sensor]">
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+        </section>
