Adicionando conteudo problema e tecnologia no html

--- a/index.html
+++ b/index.html
@@ -106,3 +106,26 @@
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
         </section>
+
+                <section id="problema" class="py-12 bg-white rounded-xl shadow-lg mb-12 flex flex-col md:flex-row items-center justify-center p-6">
+            <div class="md:w-1/2 md:pr-8 mb-6 md:mb-0">
+                <h2 class="text-3xl font-bold text-blue-600 mb-4">O Problema das Enchentes</h2>
+                <p class="text-gray-700 mb-3">Enchentes causam perdas devastadoras, afetando comunidades e economias. A falta de aviso prévio agrava a situação, resultando em danos materiais e, tragicamente, vidas perdidas.</p>
+                <p class="text-gray-700">A imprevisibilidade e a rápida elevação dos níveis de água são desafios críticos. Nossa solução visa mitigar esses riscos, fornecendo informações cruciais antecipadamente.</p>
+            </div>
+            <div class="md:w-1/2 flex justify-center">
+                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Cidade+Inundada" alt="[Image of Flooded City]" class="rounded-lg shadow-md w-full max-w-md">
+            </div>
+        </section>
+
+        <section id="tecnologias" class="py-12 bg-blue-50 rounded-xl shadow-lg mb-12 flex flex-col md:flex-row-reverse items-center justify-center p-6">
+            <div class="md:w-1/2 md:pl-8 mb-6 md:mb-0">
+                <h2 class="text-3xl font-bold text-blue-600 mb-4">Tecnologias de Ponta</h2>
+                <p class="text-gray-700 mb-3">Utilizamos sensores IoT avançados para monitorar o nível dos rios em tempo real. Dados são transmitidos via redes sem fio para nossa plataforma centralizada.</p>
+                <p class="text-gray-700">Inteligência Artificial e Machine Learning analisam padrões hídricos. Isso permite prever enchentes com alta precisão, oferecendo alertas proativos e confiáveis.</p>
+            </div>
+            <div class="md:w-1/2 flex justify-center">
+                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Sensores+IoT" alt="[Image of IoT Sensors]" class="rounded-lg shadow-md w-full max-w-md">
+            </div>
+        </section>
+
