--- a/index.html
+++ b/index.html
@@ -129,3 +129,26 @@
             </div>
         </section>
 
+                <section id="objetivos" class="py-12 bg-white rounded-xl shadow-lg mb-12 flex flex-col md:flex-row items-center justify-center p-6">
+            <div class="md:w-1/2 md:pr-8 mb-6 md:mb-0">
+                <h2 class="text-3xl font-bold text-blue-600 mb-4">Nossos Objetivos</h2>
+                <p class="text-gray-700 mb-3">Nosso principal objetivo é salvar vidas e proteger propriedades. Fornecemos alertas precisos que permitem evacuações seguras e rápidas.</p>
+                <p class="text-700">Buscamos empoderar comunidades com informações vitais. Queremos minimizar o impacto das enchentes, promovendo resiliência e segurança hídrica sustentável.</p>
+            </div>
+            <div class="md:w-1/2 flex justify-center">
+                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Pessoas+Seguras" alt="[Image of Safe People]" class="rounded-lg shadow-md w-full max-w-md">
+            </div>
+        </section>
+
+        <section id="publico-alvo" class="py-12 bg-blue-50 rounded-xl shadow-lg mb-12 flex flex-col md:flex-row-reverse items-center justify-center p-6">
+            <div class="md:w-1/2 md:pl-8 mb-6 md:mb-0">
+                <h2 class="text-3xl font-bold text-blue-600 mb-4">Público-Alvo</h2>
+                <p class="text-gray-700 mb-3">Nossa solução atende a governos locais, agências de defesa civil e comunidades ribeirinhas. Também é vital para empresas e indústrias em áreas de risco.</p>
+                <p class="text-gray-700">Qualquer um em regiões suscetíveis a enchentes se beneficiará. Nosso sistema é projetado para proteger a todos, desde famílias a grandes infraestruturas.</p>
+            </div>
+            <div class="md:w-1/2 flex justify-center">
+                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Comunidade" alt="[Image of Community]" class="rounded-lg shadow-md w-full max-w-md">
+            </div>
+        </section>
+
+
