--- a/index.html
+++ b/index.html
@@ -151,4 +151,27 @@
             </div>
         </section>
 
+                <section id="beneficios" class="py-12 bg-white rounded-xl shadow-lg mb-12 flex flex-col md:flex-row items-center justify-center p-6">
+            <div class="md:w-1/2 md:pr-8 mb-6 md:mb-0">
+                <h2 class="text-3xl font-bold text-blue-600 mb-4">Benefícios Inovadores</h2>
+                <p class="text-gray-700 mb-3">Oferecemos monitoramento contínuo e alertas em tempo real. Isso permite respostas rápidas, minimizando danos e protegendo vidas humanas.</p>
+                <p class="text-gray-700">Aumentamos a segurança pública e a resiliência urbana. Reduzimos custos de recuperação pós-enchente, promovendo um futuro mais seguro e sustentável para todos.</p>
+            </div>
+            <div class="md:w-1/2 flex justify-center">
+                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Beneficios" alt="[Image of Benefits]" class="rounded-lg shadow-md w-full max-w-md">
+            </div>
+        </section>
+
+        <section id="dia-a-dia" class="py-12 bg-blue-50 rounded-xl shadow-lg mb-12 flex flex-col md:flex-row-reverse items-center justify-center p-6">
+            <div class="md:w-1/2 md:pl-8 mb-6 md:mb-0">
+                <h2 class="text-3xl font-bold text-blue-600 mb-4">Impacto no Dia a Dia</h2>
+                <p class="text-gray-700 mb-3">Usuários receberão notificações instantâneas em seus dispositivos. Isso permite que tomem decisões informadas sobre evacuação ou proteção de bens.</p>
+                <p class="text-lg text-gray-500 mt-2">A paz de espírito é um benefício inestimável. Nossa solução transforma a incerteza em preparação, permitindo que as comunidades vivam com mais segurança e confiança.</p>
+            </div>
+            <div class="md:w-1/2 flex justify-center">
+                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Notificacoes" alt="[Image of Notifications]" class="rounded-lg shadow-md w-full max-w-md">
+            </div>
+        </section>
+
+
 
