arrumando codigo html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./estilo.css"> 
+    <link rel="stylesheet" href="./src/css/estilo.css"> 
 </head>
 <body class="bg-gray-50 text-gray-800 theme-light">
 
@@ -59,7 +59,7 @@
             </div>
         </section>
 
-                <section id="theme-switcher-section" class="py-12 bg-white rounded-xl shadow-lg mb-12 p-6 text-center">
+        <section id="theme-switcher-section" class="py-12 bg-white rounded-xl shadow-lg mb-12 p-6 text-center">
             <h2 class="text-3xl font-bold text-blue-600 mb-8">Personalize a Aparência da Página</h2>
             <p class="text-gray-700 mb-6 max-w-2xl mx-auto">Alterne entre diferentes temas visuais para uma experiência personalizada:</p>
             <div class="flex justify-center space-x-6 flex-wrap">
@@ -84,8 +84,8 @@
             </div>
         </section>
 
-                <section id="galeria" class="py-12 bg-white rounded-xl shadow-lg mb-12 p-6">
-            <h2 class="text-3xl font-bold text-blue-600 text-center mb-8">Imagens Ilustrativas</h2>
+        <section id="galeria" class="py-12 bg-white rounded-xl shadow-lg mb-12 p-6">
+            <h2 class="text-3xl font-bold text-blue-600 text-center mb-8">Galeria de Imagens</h2>
             <div class="slideshow-container">
                 <div class="mySlides fade">
                     <img src="https://placehold.co/800x450/a7d9f2/000000?text=Rio+com+Nivel+Normal" alt="[Image of River with Normal Level]">
@@ -107,7 +107,7 @@
             </div>
         </section>
 
-                <section id="problema" class="py-12 bg-white rounded-xl shadow-lg mb-12 flex flex-col md:flex-row items-center justify-center p-6">
+        <section id="problema" class="py-12 bg-white rounded-xl shadow-lg mb-12 flex flex-col md:flex-row items-center justify-center p-6">
             <div class="md:w-1/2 md:pr-8 mb-6 md:mb-0">
                 <h2 class="text-3xl font-bold text-blue-600 mb-4">O Problema das Enchentes</h2>
                 <p class="text-gray-700 mb-3">Enchentes causam perdas devastadoras, afetando comunidades e economias. A falta de aviso prévio agrava a situação, resultando em danos materiais e, tragicamente, vidas perdidas.</p>
@@ -129,7 +129,7 @@
             </div>
         </section>
 
-                <section id="objetivos" class="py-12 bg-white rounded-xl shadow-lg mb-12 flex flex-col md:flex-row items-center justify-center p-6">
+        <section id="objetivos" class="py-12 bg-white rounded-xl shadow-lg mb-12 flex flex-col md:flex-row items-center justify-center p-6">
             <div class="md:w-1/2 md:pr-8 mb-6 md:mb-0">
                 <h2 class="text-3xl font-bold text-blue-600 mb-4">Nossos Objetivos</h2>
                 <p class="text-gray-700 mb-3">Nosso principal objetivo é salvar vidas e proteger propriedades. Fornecemos alertas precisos que permitem evacuações seguras e rápidas.</p>
@@ -151,7 +151,7 @@
             </div>
         </section>
 
-                <section id="beneficios" class="py-12 bg-white rounded-xl shadow-lg mb-12 flex flex-col md:flex-row items-center justify-center p-6">
+        <section id="beneficios" class="py-12 bg-white rounded-xl shadow-lg mb-12 flex flex-col md:flex-row items-center justify-center p-6">
             <div class="md:w-1/2 md:pr-8 mb-6 md:mb-0">
                 <h2 class="text-3xl font-bold text-blue-600 mb-4">Benefícios Inovadores</h2>
                 <p class="text-gray-700 mb-3">Oferecemos monitoramento contínuo e alertas em tempo real. Isso permite respostas rápidas, minimizando danos e protegendo vidas humanas.</p>
@@ -173,7 +173,8 @@
             </div>
         </section>
 
-                <section id="seguranca" class="py-12 bg-white rounded-xl shadow-lg mb-12 p-6">
+        <!-- Nova Seção: Segurança em Enchentes (com acordeão e sem imagens) -->
+        <section id="seguranca" class="py-12 bg-white rounded-xl shadow-lg mb-12 p-6">
             <h2 class="text-3xl font-bold text-blue-600 text-center mb-8">Segurança em Enchentes: O Que Você Precisa Saber</h2>
             <div class="space-y-4">
                 <div class="accordion-item bg-gray-50 p-4 rounded-lg shadow-sm">
@@ -255,7 +256,7 @@
             </div>
         </section>
 
-                <section id="contato" class="py-12 bg-blue-50 rounded-xl shadow-lg mb-12 p-6">
+        <section id="contato" class="py-12 bg-blue-50 rounded-xl shadow-lg mb-12 p-6">
             <h2 class="text-3xl font-bold text-blue-600 text-center mb-8">Entre em Contato</h2>
             <p class="text-gray-700 mb-6 text-center max-w-2xl mx-auto">Preencha o formulário abaixo para saber mais sobre nossa solução ou tirar suas dúvidas.</p>
             <form id="contact-form" class="max-w-xl mx-auto p-6 bg-white rounded-lg shadow-md">
@@ -294,12 +295,6 @@
         </div>
     </footer>
 
-    <script src="./sript.js"></script> 
+    <script src="./src/js/script.js"></script> <!-- Link para o arquivo JavaScript separado -->
 </body>
 </html>
-
-
-        
-
-
-
