Adicionando imagens e o arquivo equipe.txt

--- a/index.html
+++ b/index.html
@@ -85,22 +85,16 @@
         </section>
 
         <section id="galeria" class="py-12 bg-white rounded-xl shadow-lg mb-12 p-6">
-            <h2 class="text-3xl font-bold text-blue-600 text-center mb-8">Galeria de Imagens</h2>
+            <h2 class="text-3xl font-bold text-blue-600 text-center mb-8">Imagens</h2>
             <div class="slideshow-container">
                 <div class="mySlides fade">
-                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Rio+com+Nivel+Normal" alt="[Image of River with Normal Level]">
+                    <img src="./src/assets/img/enchentes1.jpg" alt="[Imagem enchentes 1]">
                 </div>
                 <div class="mySlides fade">
-                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Alerta+de+Cheia+Emitido" alt="[Image of Flood Alert Issued]">
+                    <img src="./src/assets/img/enchentes2.jpg" alt="[Imagem enchentes 2]">
                 </div>
                 <div class="mySlides fade">
-                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Equipe+de+Resgate+em+Acao" alt="[Image of Rescue Team in Action]">
-                </div>
-                <div class="mySlides fade">
-                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Comunidade+Evacuando" alt="[Image of Community Evacuating]">
-                </div>
-                <div class="mySlides fade">
-                    <img src="https://placehold.co/800x450/a7d9f2/000000?text=Sensor+de+Nivel+de+Agua" alt="[Image of Water Level Sensor]">
+                    <img src="./src/assets/img/enchentes3.jpg" alt="[Imagens enchentes 3]">
                 </div>
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -114,7 +108,7 @@
                 <p class="text-gray-700">A imprevisibilidade e a rápida elevação dos níveis de água são desafios críticos. Nossa solução visa mitigar esses riscos, fornecendo informações cruciais antecipadamente.</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Cidade+Inundada" alt="[Image of Flooded City]" class="rounded-lg shadow-md w-full max-w-md">
+                <img src="./src/assets/img/cidade-inundada.jpg" alt="[Imagem cidade cidade-inundada]" class="rounded-lg shadow-md w-full max-w-md">
             </div>
         </section>
 
@@ -125,7 +119,7 @@
                 <p class="text-gray-700">Inteligência Artificial e Machine Learning analisam padrões hídricos. Isso permite prever enchentes com alta precisão, oferecendo alertas proativos e confiáveis.</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Sensores+IoT" alt="[Image of IoT Sensors]" class="rounded-lg shadow-md w-full max-w-md">
+                <img src="./src/assets/img/tecnologia.jpg" alt="[tecnologias]" class="rounded-lg shadow-md w-full max-w-md">
             </div>
         </section>
 
@@ -136,7 +130,7 @@
                 <p class="text-700">Buscamos empoderar comunidades com informações vitais. Queremos minimizar o impacto das enchentes, promovendo resiliência e segurança hídrica sustentável.</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Pessoas+Seguras" alt="[Image of Safe People]" class="rounded-lg shadow-md w-full max-w-md">
+                <img src="./src/assets/img/familia.jpg" alt="[pessoas seguras]" class="rounded-lg shadow-md w-full max-w-md">
             </div>
         </section>
 
@@ -147,7 +141,7 @@
                 <p class="text-gray-700">Qualquer um em regiões suscetíveis a enchentes se beneficiará. Nosso sistema é projetado para proteger a todos, desde famílias a grandes infraestruturas.</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Comunidade" alt="[Image of Community]" class="rounded-lg shadow-md w-full max-w-md">
+                <img src="./src/assets/img/publico.jpg" alt="[publico]" class="rounded-lg shadow-md w-full max-w-md">
             </div>
         </section>
 
@@ -158,7 +152,7 @@
                 <p class="text-gray-700">Aumentamos a segurança pública e a resiliência urbana. Reduzimos custos de recuperação pós-enchente, promovendo um futuro mais seguro e sustentável para todos.</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Beneficios" alt="[Image of Benefits]" class="rounded-lg shadow-md w-full max-w-md">
+                <img src="./src/assets/img/beneficios.jpg" alt="[beneficios]" class="rounded-lg shadow-md w-full max-w-md">
             </div>
         </section>
 
@@ -169,7 +163,7 @@
                 <p class="text-lg text-gray-500 mt-2">A paz de espírito é um benefício inestimável. Nossa solução transforma a incerteza em preparação, permitindo que as comunidades vivam com mais segurança e confiança.</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://placehold.co/500x300/e0f2f7/000000?text=Notificacoes" alt="[Image of Notifications]" class="rounded-lg shadow-md w-full max-w-md">
+                <img src="./src/assets/img/notificação.jpg" alt="[notificação]" class="rounded-lg shadow-md w-full max-w-md">
             </div>
         </section>
 
